Creates tab for showing all textbooks
Creates function for fetching all textbooks from server with pagination, show them using the TextbookCard and implemented localization enabling multiple languages like Serbian and English.

--- a/textbook_selling_app/lib/core/localization/langs/en.json
+++ b/textbook_selling_app/lib/core/localization/langs/en.json
@@ -83,10 +83,10 @@
     "passwordHint": "Minimum 6 characters",
     "repeatPasswordLabel": "Repeat password",
     "repeatPasswordHint": "Repeat your password",
-    "nameLabel": "Name",
-    "nameHint": "John",
-    "surnameLabel": "Surname",
-    "surnameHint": "Doe",
+    "firstNameLabel": "First name",
+    "firstNameHint": "John",
+    "lastNameLabel": "Last name",
+    "lastNameHint": "Doe",
     "dateOfBirthLabel": "Date of Birth",
     "dateOfBirthHint": "Select Date",
     "dialCodeLabel": "Dial Code",
