--- a/textbook_selling_app/lib/core/localization/langs/sr.json
+++ b/textbook_selling_app/lib/core/localization/langs/sr.json
@@ -82,10 +82,10 @@
   "passwordHint": "Minimum 6 karaktera",
   "repeatPasswordLabel": "Ponovi lozinku",
   "repeatPasswordHint": "Ponovite vašu lozinku",
-  "nameLabel": "Ime",
-  "nameHint": "Petar",
-  "surnameLabel": "Prezime",
-  "surnameHint": "Petrović",
+  "firstNameLabel": "Ime",
+  "firstNameHint": "Petar",
+  "lastNameLabel": "Prezime",
+  "lastNameHint": "Petrović",
   "dateOfBirthLabel": "Datum rođenja",
   "dateOfBirthHint": "Izaberite datum",
   "dialCodeLabel": "Pozivni broj",
