Improve code and fix bugs
Create education institution service and move switch widget to core folder.

--- a/textbook_selling_app/lib/core/localization/langs/sr.json
+++ b/textbook_selling_app/lib/core/localization/langs/sr.json
@@ -66,8 +66,8 @@
 
   "textbookPhotosTitle": "Fotografije udžbenika:",
 
-  "faculty": "Fakultet",
-  "higherSchool": "Viša škola",
+  "faculty": "Faculty",
+  "higherSchool": "Higher school",
 
   "gettingDataErrorMessage": "Greška pri preuzimanju podataka. Pokušajte ponovo kasnije.",
   "unknownErrorMessage": "Nepoznata greška.",
