Implements update textbook functionality
Implements update functionality by preloading existing edu institution info, textbook info and images so user can easily make changes and save updated textbook.

--- a/textbook_selling_app/lib/core/localization/langs/en.json
+++ b/textbook_selling_app/lib/core/localization/langs/en.json
@@ -34,6 +34,8 @@
     "pickFromGalleryButton": "Gallery",
 
     "addTextbook": "Add Textbook",
+    "saveTextbook": "Save Textbook",
+    "editTextbook": "Edit Textbook",
 
     
     "educationInstitutionInformationsTitle": "Education Institution Informations:",
