--- a/textbook_selling_app/lib/core/localization/langs/sr.json
+++ b/textbook_selling_app/lib/core/localization/langs/sr.json
@@ -34,6 +34,8 @@
   "pickFromGalleryButton": "Galerija",
 
   "addTextbook": "Dodaj udžbenik",
+  "saveTextbook": "Sačuvaj udžbenik",
+  "editTextbook": "Izmeni udžbenik",
 
   "educationInstitutionInformationsTitle": "Informacije o obrazovnoj ustanovi:",
   "institutionTypeLabel": "Tip obrazovne ustanove",
