--- a/textbook_selling_app/lib/core/localization/langs/en.json
+++ b/textbook_selling_app/lib/core/localization/langs/en.json
@@ -116,9 +116,21 @@
     "yesText": "Yes",
     "noText": "No",
 
-    "noFavoriteTextbooksMessage": "There is no favorite textbooks. 😢",
-    "noMyTextbooksMessage": "You haven't added any textbooks yet. 😢",
+    "noFavoriteTextbooksMessage": "There are no favorite textbooks. 😕",
+    "noMyTextbooksMessage": "You haven't added any textbooks yet. 😕",
+    "noTextbooks": "There are no textbooks. 😕",
     "areYouSure": "Are you sure?",
     "deleteConfirmationMessage": "Do you really want to delete this item?",
-    "logoutConfirmationMessage": "Do you really want to logout?"
+    "logoutConfirmationMessage": "Do you really want to logout?",
+
+    "inbox": "Inbox",
+    "message": "Type message...",
+    "loading": "Loading...",
+    "unknownUser": "Unknown User",
+    "noMessages": "No messages yet.",
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "filterMenu": "Filter Menu",
+    "reset": "Reset",
+    "applyFilters": "Apply Filters"
   }
