--- a/textbook_selling_app/lib/core/localization/langs/sr.json
+++ b/textbook_selling_app/lib/core/localization/langs/sr.json
@@ -119,5 +119,13 @@
   "noMyTextbooksMessage": "Nema tvojih oglasa za udžbenike. 😢",
   "areYouSure": "Jesi li siguran?",
   "deleteConfirmationMessage": "Da li stvarno želiš da izbrišeš udžbenik?",
-  "logoutConfirmationMessage": "Da li stvarno želiš da se izloguješ?"
+  "logoutConfirmationMessage": "Da li stvarno želiš da se izloguješ?",
+
+  "inbox": "Poruke",
+  "message": "Unesi tekst poruke...",
+  "loading": "Učitavam...",
+  "unknownUser": "Nepoznat korisnik",
+  "noMessages": "Nema poruka, čet je prazan.",
+  "today": "Danas",
+  "yesterday": "Juče"
 }
